Fix log out icon centering in collapsed sidebar

--- a/app/src/components/sidebar/style.sass
+++ b/app/src/components/sidebar/style.sass
@@ -58,6 +58,11 @@
       &:hover
         opacity: .95
 
+      .feather-log-out
+        width: .95rem
+        height: .95rem
+        margin: 0
+
   h2
     font-size: .6rem
     color: $light-text-hint
